--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,6 +2,7 @@ tommy:
   name: Tommy Warhurst
   email: tommy@example.com
   password_digest: <%= User.digest('password') %>
+  admin: true
 
 archer:
   name: Sterling archer
